--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world
+<!doctype html>
+<html lang="en">
+    <head>
+        <title>My Site</title>
+        <link rel="stylesheet" href="css/app.css">
+    </head>
+    <body>
+        <h1>Greetings</h1>
+        <script src="javascript/app.js"></script>
+    </body>
+</html>
