--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+{% comment %} <!doctype html> {% endcomment %}
 <html lang="en">
     <head>
         <title>My Site</title>
-        <link rel="stylesheet" href="css/app.css">
+        {% comment %} <link rel="stylesheet" href="css/app.css"> {% endcomment %}
     </head>
     <body>
         <h1>Greetings</h1>
-        <script src="javascript/app.js"></script>
+        {% comment %} <script src="javascript/app.js"></script> {% endcomment %}
     </body>
 </html>
