--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 {% comment %} <!doctype html> {% endcomment %}
 <html lang="en">
     <head>
-        <title>My Site</title>
+        <title>Hello and Welcome</title>
         {% comment %} <link rel="stylesheet" href="css/app.css"> {% endcomment %}
     </head>
     <body>
