--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-{% comment %} <!doctype html> {% endcomment %}
+<!doctype html>
 <html lang="en">
     <head>
         <title>Hello and Welcome</title>
-        {% comment %} <link rel="stylesheet" href="css/app.css"> {% endcomment %}
+        <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
         <h1>Greetings</h1>
-        {% comment %} <script src="javascript/app.js"></script> {% endcomment %}
+        <script src="javascript/app.js"></script>
     </body>
 </html>
